# withourpowerscombined

./: .coderabbit.yaml  .gitignore  .gitmodules  .luacheckrc  .pre-commit-config.yaml  LICENSE  README.md  _convert_icons.py  build_exe.py  manifest.json  pyproject.toml  wopc_patches.toml
.claude/: CLAUDE.md  QUICKSTART_STATE.md  SCFA_ENGINE_REFERENCE.md
.claude/plans/: awesome-map-preview.md  calm-doodling-honey.md  faf-only-mode.md  improve-launcher-styling.md  internet-discovery.md  merge-vanilla-lua-into-faf-ui.md  mod-system-refactor.md  multiplayer-feature-checklist.md  scmap-preview-extraction.md
.claude/utils/: UTILS.md  deploy_and_launch.py  find_missing_imports.py  read_game_log.py  rebuild_exe.py  regenerate_init.py  run_checks.py
.gemini/: GEMINI.md
.github/workflows/: ci.yml
docs/: architecture.md  backlog.md  patching.md  plan.md  setup-guide.md  utils-list.md  vision.md
firebase/: database.rules.json
gamedata/wopc_patches/lua/: debugai.lua  kirvesbeams.lua  kirveseffects.lua  kirvesweapons.lua  loudutilities.lua  wopc_system.lua
gamedata/wopc_patches/lua/ai/: aiarchetype-managerloader.lua  attackmanager.lua  gridbrain.lua  griddeposits.lua  gridpresence.lua  gridreclaim.lua  gridrecon.lua  sorianutilities.lua  transportutilities.lua
gamedata/wopc_patches/lua/sim/units/: StructureUnit.lua
gamedata/wopc_patches/lua/ui/: uimain.lua
gamedata/wopc_patches/lua/wopc/: multilobby.lua  quickstart.lua  waitingroom.lua
init/: init_wopc.lua
launcher/: __init__.py  __version__.py  config.py  deploy.py  discovery.py  file_transfer.py  game_config.py  init_generator.py  lobby.py  log.py  manifest.py  manifest_builder.py  map_scanner.py  mods.py  patcher.py  prefs.py  relay.py  scfa_finder.py  setup.py  toolchain.py  updater.py  wopc.py
launcher/gui/: __init__.py  app.py  map_inspect.py  worker.py
launcher/gui/icons/: ASSETS.md
scripts/: build_content_release.py  build_wopc_core.py  release.py
tests/: __init__.py  conftest.py  test_build_deps.py  test_config.py  test_deploy.py  test_discovery.py  test_file_transfer.py  test_game_config.py  test_gui.py  test_init_generator.py  test_lobby.py  test_manifest.py  test_map_scanner.py  test_mods.py  test_patcher.py  test_prefs.py  test_relay.py  test_scfa_finder.py  test_toolchain.py  test_updater.py  test_validate.py  test_wopc.py
