[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wopc"
version = "2.01.0011"
description = "Standalone gameplay + FAF engine patches for Supreme Commander: Forged Alliance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "reimarus"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Real Time Strategy",
]

[project.scripts]
wopc = "launcher.wopc:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pyinstaller>=6.0",
]
gui = [
    "customtkinter>=5.2",
    "Pillow>=10.0",
]

# --- Tool configurations ---

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["launcher"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "PTH",   # flake8-use-pathlib
    "T20",   # flake8-print (catches bare print statements)
]
ignore = [
    "T201",  # Allow print() — remove after logging migration
]

[tool.ruff.lint.isort]
known-first-party = ["launcher"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
files = ["launcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=launcher",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-n", "auto",
    "-m", "not slow",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["launcher"]
omit = [
    "tests/*",
    "launcher/gui/app.py",  # GUI module — requires display, untestable in headless CI
]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["launcher*"]
